--- a/extension/SavePassword.html
+++ b/extension/SavePassword.html
@@ -17,7 +17,7 @@
             <input type="text" id="username" name="username">
             <label for="password">Password:</label>
             <div class="password-container">
-                <input type="password" id="password" name="password">
+                <input type="password" id="servicePassword" name="password">
                 <button type="button" class="show-password" id="show-password"><i class="gg-eye"></i></button>
             </div>
             <button type="submit" id="saveButton">SAVE</button>
